# haskell-mooc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  part1.html  part2.html  style.css
exercises/: .hlint.yaml  Set1.hs  Set10a.hs  Set10aTest.hs  Set10b.hs  Set10bTest.hs  Set11a.hs  Set11aTest.hs  Set11b.hs  Set11bTest.hs  Set12.hs  Set12Test.hs  Set13a.hs  Set13aTest.hs  Set13b.hs  Set13bTest.hs  Set14a.hs  Set14aTest.hs  Set14b.hs  Set14bTest.hs  Set15.hs  Set15Test.hs  Set16a.hs  Set16aTest.hs  Set16b.hs  Set16bTest.hs  Set1Test.hs  Set2.hs  Set2Test.hs  Set2a.hs  Set2aTest.hs  Set2b.hs  Set2bTest.hs  Set3a.hs  Set3aTest.hs  Set3b.hs  Set3bTest.hs  Set4a.hs  Set4aTest.hs  Set4b.hs  (+17 more)
exercises/Examples/: Bank.hs  FetchWords.hs  HelloServer.hs  PathServer.hs  Phantom.hs  Phonebook.hs  QuickCheck.hs  ReadTypes.hs  Validation.hs
exercises/Mooc/: LimitedPrelude.hs  Test.hs  Th.hs  Todo.hs  VeryLimitedPrelude.hs
