name: tests
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  build-depends: QuickCheck==2.14.2
               , hspec==2.7.10
               , base==4.14.3.0
               , containers==0.6.5.1
               , array==0.5.4.0
               , transformers==0.5.6.2
               , template-haskell==2.16.0.0
               , th-abstraction==0.4.3.0
               , generic-random==1.4.0.0
               , JuicyPixels==3.3.6
               , HTTP==4000.3.16
               , http-types==0.12.3
               , text==1.2.4.1
               , bytestring==0.10.12.0
               , wai==3.2.3
               , warp==3.3.18
               , sqlite-simple==0.4.18.0
               , parallel==3.2.2.0
  default-language: Haskell2010
