name: tests
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  build-depends: QuickCheck==2.14.3
               , hspec==2.11.10
               , base==4.18.2.1
               , containers==0.6.7
               , array==0.5.6.0
               , transformers==0.6.1.0
               , template-haskell==2.20.0.0
               , th-abstraction==0.5.0.0
               , generic-random==1.5.0.1
               , JuicyPixels==3.3.9
               , HTTP==4000.4.1
               , http-types==0.12.4
               , text==2.0.2
               , bytestring==0.11.5.3
               , wai==3.2.4
               , warp==3.3.31
               , sqlite-simple==0.4.19.0
               , parallel==3.2.2.0
  default-language: Haskell2010
